--- a/src/main/java/world.yml
+++ b/src/main/java/world.yml
@@ -22,9 +22,9 @@ BlackList:
   ItemInteract: 23, 54, 58, 61, 62, 84, 116, 117, 130, 145
   ## Inventory, list here, all block/item ids that will be automatically removed from creative players inventories.
   Inventory: []
-  ## EconomySign, list here, the line of all signs that creative players will be unable to interact with.
+  ## SignText, list here, the line of all signs that creative players will be unable to interact with.
   ## Obs: DONT INCLUDE [] or color codes, and use _ for spaces. This option does not work well, is recomended to use the permission system.
-  EconomySigns: buy, sell, trade
+  SignText: buy, sell, trade
 
 ## To any option in "MiscProtection" Works, Events.MiscProtection has to be "true" in settings.yml.
 MiscProtection:
