FCoreLib does not have to run as a plugin

--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathLayoutType>custom</classpathLayoutType>
-                            <customClasspathLayout>../lib/h2.jar</customClasspathLayout>
+                            <customClasspathLayout>../lib/h2.jar ../lib/FCoreLib.jar</customClasspathLayout>
                         </manifest>
                     </archive>
                 </configuration>
