Added an option to disable the fall damage fix (#82)

--- a/src/main/java/settings.yml
+++ b/src/main/java/settings.yml
@@ -72,6 +72,8 @@ PlayerData:
   Teleport: false
   ## SetSurvival, if true, the player will be set to survival on login (ATTENTTION: THIS MAY GLITCH WITH AUTH PLUGINS)
   SetSurvival: false
+  ## FallGlith, if true, if the player is falling and right before hitting the ground he change its gamemode to survival he wont take damage
+  FallGlitch: false
   
 ## This section will define the armor to set on every creative player, for advanced options, while wearing the armor type /cc set armor.
 CreativeArmor:
