--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
     <repositories>
         <repository>
             <id>releases</id>
+            <url>http://localhost:8081/nexus/content/repositories/releases</url>
+        </repository>
+        <repository>
+            <id>releases-bkp</id>
             <url>https://dl.dropboxusercontent.com/u/55730138/sonatype-work/releases</url>
         </repository>
         <repository>
@@ -95,7 +99,7 @@
         <dependency>
             <groupId>me.FurH</groupId>
             <artifactId>FCoreLib</artifactId>
-            <version>0.3.24</version>
+            <version>0.4.22</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -141,7 +145,7 @@
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
-                        </goals>
+                        </goals><!--
                         <configuration>
                             <relocations>
                                 <relocation>
@@ -149,7 +153,7 @@
                                     <shadedPattern>me.FurH.${artifactId}.core</shadedPattern>
                                 </relocation>
                             </relocations>
-                        </configuration>
+                        </configuration>-->
                     </execution>
                 </executions>
                 <configuration>
