--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
-                        </goals><!--
+                        </goals>
                         <configuration>
                             <relocations>
                                 <relocation>
@@ -153,7 +153,7 @@
                                     <shadedPattern>me.FurH.${artifactId}.core</shadedPattern>
                                 </relocation>
                             </relocations>
-                        </configuration>-->
+                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
