--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.5.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>1.5.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
@@ -99,7 +105,7 @@
         <dependency>
             <groupId>me.FurH</groupId>
             <artifactId>FCoreLib</artifactId>
-            <version>0.4.22</version>
+            <version>0.4.23</version>
             <type>jar</type>
         </dependency>
         <dependency>
