--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
             <url>https://dl.dropboxusercontent.com/u/55730138/sonatype-work/releases</url>
         </repository>
         <repository>
+            <id>bukkit-snapshots</id>
+            <url>http://repo.bukkit.org/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public</url>
         </repository>
@@ -93,13 +97,13 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.5.2-R1.0</version>
+            <version>1.6.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.5.2-R1.0</version>
+            <version>1.6.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
