--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.onarandombox</groupId>
+            <artifactId>MultiverseCore</artifactId>
+            <version>2.5-b641</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>de.diddiz.LogBlock</groupId>
             <artifactId>LogBlock</artifactId>
             <version>1.70</version>
