--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>CreativeControl</name>
-    <url>http://dev.bukkit.org/server-mods/creativecontrol/</url>
+    <url>http://github.org/kangarko/creativecontrol/</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,12 +16,8 @@
 
     <repositories>
         <repository>
-            <id>releases</id>
-            <url>http://localhost:8081/nexus/content/repositories/releases</url>
-        </repository>
-        <repository>
             <id>releases-bkp</id>
-            <url>https://dl.dropboxusercontent.com/u/55730138/sonatype-work/releases</url>
+            <url>C:\Users\kangarko.Nope\Documents\GitHub\CreativeControl\FCoreLib\target</url>
         </repository>
         <repository>
             <id>bukkit-snapshots</id>
@@ -31,92 +27,89 @@
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public</url>
         </repository>
-    </repositories>
+        </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.anjocaido.groupmanager</groupId>
             <artifactId>GroupManager</artifactId>
-            <version>2.10.1</version>
-            <scope>provided</scope>
+            <version>2.12.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/EssentialsGroupManager.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>me.botsko</groupId>
             <artifactId>Prism</artifactId>
-            <version>1.5.8</version>
-            <scope>provided</scope>
+            <version>2.0-beta4</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/Prism.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>ru.tehkode</groupId>
             <artifactId>PermissionsEx</artifactId>
-            <version>1.19.5</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.skitscape</groupId>
-            <artifactId>survivalgames</artifactId>
-            <version>0.5.0</version>
-            <scope>provided</scope>
+            <version>1.20.4</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/PermissionsEx.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>1.2.23</version>
-            <scope>provided</scope>
+            <version>1.2.29</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/Vault.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.onarandombox</groupId>
             <artifactId>MultiverseCore</artifactId>
-            <version>2.5-b641</version>
-            <scope>provided</scope>
+            <version>2.5-b677</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/Multiverse-Core-2.5.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.diddiz.LogBlock</groupId>
             <artifactId>LogBlock</artifactId>
-            <version>1.70</version>
-            <scope>provided</scope>
+            <version>1.80</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/LogBlock.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>WorldEdit</artifactId>
-            <version>5.5.5</version>
-            <scope>provided</scope>
+            <version>5.5.9-b2998</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/WorldEdit.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>uk.org.whoami</groupId>
             <artifactId>AuthMe</artifactId>
-            <version>2.8</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.cypherx.xauth</groupId>
-            <artifactId>xAuth</artifactId>
-            <version>2.0.20</version>
-            <scope>provided</scope>
+            <version>3.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/AuthMe.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.garbagemule.MobArena</groupId>
             <artifactId>MobArena</artifactId>
-            <version>0.94.4.91</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.6.2-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.FurH</groupId>
-            <artifactId>FCoreLib</artifactId>
-            <version>0.7.28</version>
-            <type>jar</type>
+            <version>0.95.5</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/MobArena.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>net.coreprotect</groupId>
             <artifactId>CoreProtect</artifactId>
             <version>2.0.8</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/CoreProtect.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.7.2-R0.3-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.FurH</groupId>
+            <artifactId>FCoreLib</artifactId>
+            <version>0.7.29</version>
         </dependency>
     </dependencies>
     <build>
@@ -160,14 +153,14 @@
                             <relocations>
                                 <relocation>
                                     <pattern>me.FurH.Core</pattern>
-                                    <shadedPattern>me.FurH.${artifactId}.core</shadedPattern>
+                                    <shadedPattern>me.FurH.${project.artifactId}.core</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
                     </execution>
                 </executions>
                 <configuration>
-                    <finalName>${artifactId}</finalName>
+                    <finalName>${project.artifactId}</finalName>
                 </configuration>
             </plugin>
             <plugin>
