--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>me.botsko</groupId>
             <artifactId>Prism</artifactId>
-            <version>2.0-beta4</version>
+            <version>2.0-beta7</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Prism.jar</systemPath>
         </dependency>
@@ -54,14 +54,14 @@
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>1.2.29</version>
+            <version>1.2.31</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Vault.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.onarandombox</groupId>
             <artifactId>MultiverseCore</artifactId>
-            <version>2.5-b677</version>
+            <version>2.5-b688</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Multiverse-Core-2.5.jar</systemPath>
         </dependency>
@@ -75,21 +75,21 @@
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>WorldEdit</artifactId>
-            <version>5.5.9-b2998</version>
+            <version>5.6.0</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/WorldEdit.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>uk.org.whoami</groupId>
             <artifactId>AuthMe</artifactId>
-            <version>3.2</version>
+            <version>3.3.4</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/AuthMe.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.garbagemule.MobArena</groupId>
             <artifactId>MobArena</artifactId>
-            <version>0.95.5</version>
+            <version>0.96.3</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/MobArena.jar</systemPath>
         </dependency>
@@ -103,13 +103,13 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.7.2-R0.3-SNAPSHOT</version>
+            <version>1.7.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>me.FurH</groupId>
             <artifactId>FCoreLib</artifactId>
-            <version>0.7.29</version>
+            <version>0.7.30-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
