--- a/pom.xml
+++ b/pom.xml
@@ -16,23 +16,23 @@
 
     <repositories>
         <repository>
-            <id>releases-bkp</id>
-            <url>C:\Users\kangarko.Nope\Documents\GitHub\CreativeControl\FCoreLib\target</url>
+            <id>fcorelib-local-repo</id>
+            <url>C:\Users\kangarko\Documents\GitHub\FCoreLib\target</url>
+        </repository>
+		<repository>
+            <id>local-repo</id>
+            <url>${project.basedir}/lib/</url>
         </repository>
         <repository>
             <id>bukkit-snapshots</id>
             <url>http://repo.bukkit.org/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org/content/groups/public</url>
         </repository>
         </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.anjocaido.groupmanager</groupId>
-            <artifactId>GroupManager</artifactId>
+            <artifactId>EssentialsGroupManager</artifactId>
             <version>2.12.2</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/EssentialsGroupManager.jar</systemPath>
@@ -60,7 +60,7 @@
         </dependency>
         <dependency>
             <groupId>com.onarandombox</groupId>
-            <artifactId>MultiverseCore</artifactId>
+            <artifactId>Multiverse-Core-2.5</artifactId>
             <version>2.5-b688</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Multiverse-Core-2.5.jar</systemPath>
@@ -75,14 +75,14 @@
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>WorldEdit</artifactId>
-            <version>5.6.0</version>
+            <version>6.0.0-SNAPSHOT</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/WorldEdit.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>uk.org.whoami</groupId>
             <artifactId>AuthMe</artifactId>
-            <version>3.3.4</version>
+            <version>3.3.6</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/AuthMe.jar</systemPath>
         </dependency>
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>net.coreprotect</groupId>
             <artifactId>CoreProtect</artifactId>
-            <version>2.0.8</version>
+            <version>2.0.9</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/CoreProtect.jar</systemPath>
         </dependency>
