--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
             <groupId>me.FurH</groupId>
             <artifactId>FCoreLib</artifactId>
             <version>0.7.30-SNAPSHOT</version>
+			<scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
