--- a/pom.xml
+++ b/pom.xml
@@ -19,17 +19,14 @@
             <id>fcorelib-local-repo</id>
             <url>C:\Users\kangarko\Documents\GitHub\FCoreLib\target</url>
         </repository>
-		<repository>
-            <id>local-repo</id>
-            <url>${project.basedir}/lib/</url>
-        </repository>
         <repository>
-            <id>bukkit-snapshots</id>
-            <url>http://repo.bukkit.org/content/repositories/snapshots/</url>
+            <id>spigot-snapshots</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
         </repository>
         </repositories>
 
     <dependencies>
+        <!--
         <dependency>
             <groupId>org.anjocaido.groupmanager</groupId>
             <artifactId>EssentialsGroupManager</artifactId>
@@ -37,66 +34,67 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/EssentialsGroupManager.jar</systemPath>
         </dependency>
+        -->
         <dependency>
             <groupId>me.botsko</groupId>
             <artifactId>Prism</artifactId>
-            <version>2.0-beta8</version>
+            <version>2.0.5-SNAPSHOT</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Prism.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>ru.tehkode</groupId>
             <artifactId>PermissionsEx</artifactId>
-            <version>1.21.2</version>
+            <version>1.23.1</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/PermissionsEx.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>1.2.32</version>
+            <version>1.5.3</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Vault.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.onarandombox</groupId>
             <artifactId>Multiverse-Core-2.5</artifactId>
-            <version>2.5-b688</version>
+            <version>2.5-b692</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/Multiverse-Core-2.5.jar</systemPath>
+            <systemPath>${project.basedir}/lib/Multiverse-Core.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.diddiz.LogBlock</groupId>
             <artifactId>LogBlock</artifactId>
-            <version>1.80</version>
+            <version>1.93-b239</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/LogBlock.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>WorldEdit</artifactId>
-            <version>6.0.0-SNAPSHOT</version>
+            <version>6.0.2-SNAPSHOT</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/WorldEdit.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.garbagemule.MobArena</groupId>
             <artifactId>MobArena</artifactId>
-            <version>0.96.4</version>
+            <version>0.96.9</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/MobArena.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>net.coreprotect</groupId>
             <artifactId>CoreProtect</artifactId>
-            <version>2.0.9</version>
+            <version>2.10.0</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/CoreProtect.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.7.9-R0.2-SNAPSHOT</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
